--- a/DBProject/CSS/app.css
+++ b/DBProject/CSS/app.css
@@ -5,7 +5,8 @@
 }
 .blockapp
 {
-  border: 2px solid  rgb(238, 238, 238);
+  /* border: 2px solid  rgb(238, 238, 238); */
   background-color: rgba(253, 254, 255,0.2);
+  box-shadow: 5px 5px 5px 5px #888888;
 
 }
