--- a/DBProject/CSS/app.css
+++ b/DBProject/CSS/app.css
@@ -10,3 +10,10 @@
   box-shadow: 5px 5px 5px 5px #888888;
 
 }
+.line
+{
+  width:95%;
+  height: 2px;
+  margin: 2.5% 2.5%;
+  background-color:rgb(113, 115, 116);;
+}
