--- a/DBProject/CSS/Home.css
+++ b/DBProject/CSS/Home.css
@@ -1,4 +1,8 @@
-
+*{
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
+}
 .card
 {
     height: 100%;
@@ -46,3 +50,72 @@ h5,h6{
     background-repeat: no-repeat;
     background-size: cover;
   }
+  .card
+  {
+    background-color: rgba(253, 254, 255,0.2);
+    box-shadow: 5px 5px 5px 5px #888888;
+  }
+  #footer{
+    
+    width: 100%;
+
+   padding: 2% 2%;
+   display: flex;
+    justify-content: space-evenly;
+ background-color: #007bff;
+
+    box-shadow: 5px 5px 5px 5px #888888;
+ 
+}
+ul
+{
+   width:80%;
+    display: flex;
+  
+  
+   justify-content:space-between;
+    
+}
+
+.fab{
+    width:30px;
+    padding: 7px 2px;
+    height: 30px;
+   border-radius: 50%;
+     text-align: center;
+   }
+     
+.fab:hover {
+       opacity: 0.7;
+}
+   
+.fa-facebook {
+     background: #3B5998;
+     color: white;
+     
+}
+   
+.fa-twitter {
+     background: #55ACEE;
+     color: white;
+}
+   
+.fa-google {
+     background: #dd4b39;
+     color: white;
+}
+.copy
+{
+    width:100%;
+    padding: 1% 1%;
+    background-color: #1766f7;
+    
+    box-shadow: 5px 5px 5px 5px #888888;
+}
+.ourcopy
+{
+   text-align: center;
+   padding: 0% 0%;
+   margin: 0% 0%;
+   /* color:rgb(88, 22, 22); */
+}
