--- a/DBProject/CSS/SignUp.css
+++ b/DBProject/CSS/SignUp.css
@@ -14,6 +14,15 @@ body
     background-position: center -1vh;
    
 }
+ul
+{
+   width:80%;
+    display: flex;
+  
+  
+   justify-content:space-between;
+    
+}
 .form
 {
     
