--- a/DBProject/CSS/app.css
+++ b/DBProject/CSS/app.css
@@ -17,3 +17,67 @@
   margin: 2.5% 2.5%;
   background-color:rgb(113, 115, 116);;
 }
+#footer{
+    
+  width: 100%;
+
+ padding: 2% 2%;
+ display: flex;
+  justify-content: space-evenly;
+background-color: #007bff;
+
+  box-shadow: 5px 5px 5px 5px #888888;
+
+}
+
+.fab{
+  width:30px;
+  padding: 7px 2px;
+  height: 30px;
+ border-radius: 50%;
+   text-align: center;
+ }
+   
+.fab:hover {
+     opacity: 0.7;
+}
+ 
+.fa-facebook {
+   background: #3B5998;
+   color: white;
+   
+}
+ 
+.fa-twitter {
+   background: #55ACEE;
+   color: white;
+}
+ 
+.fa-google {
+   background: #dd4b39;
+   color: white;
+}
+.copy
+{
+  width:100%;
+  padding: 1% 1%;
+  background-color: #1766f7;
+  
+  box-shadow: 5px 5px 5px 5px #888888;
+}
+ul
+{
+   width:80%;
+    display: flex;
+  
+  
+   justify-content:space-between;
+    
+}
+.ourcopy
+{
+ text-align: center;
+ padding: 0% 0%;
+ margin: 0% 0%;
+ /* color:rgb(88, 22, 22); */
+}
