--- a/DBProject/CSS/login.css
+++ b/DBProject/CSS/login.css
@@ -13,6 +13,15 @@ body
     background-position: center -2vh;
    
 }
+ul
+{
+   width:80%;
+    display: flex;
+  
+  
+   justify-content:space-between;
+    
+}
 .form
 {
     
