--- a/DBProject/CSS/Group.css
+++ b/DBProject/CSS/Group.css
@@ -1,21 +1,30 @@
-.grouppic
+h5
 {
-    text-align: center;
-    font-style:italic;
+  text-align: center;
 }
+body
 
 .grouptitleborder
 {
     border-style: solid;
     /*border-width: 2px;*/
+    text-align: center;
+    font-style:italic;
     border-radius: 100px;
     border-color: dodgerblue;
 }
+#Write
+{
+  position: relative;
+  left:50%;
+}
 .line
 {
-  width:100%;
-  height: 2px;
-  background-color:dodgerblue;
+  position: relative;
+  left:10%;
+    background-color: #d8d8d8;
+    height:  1px;
+    width: 80%;
 }
 ul
 {
@@ -25,4 +34,58 @@ ul
   
    justify-content:space-between;
     
+}
+
+.posts
+{
+  border:solid ;
+  border-radius: 10px;
+  border-color: #007bff;
+  background-color: #afccee;
+  padding: 5px 5px;
+  cursor: pointer;
+}
+
+/* The element to apply the animation to */
+.cla10{
+  display: none;
+  background-color: #007bff;
+  padding:10px 10px;
+  position: absolute;
+  top:100%;
+  left:50%;
+  color:white;
+  width:auto;
+  transform: translate(-50%,-50%);
+  animation: 3s drop;
+  z-index: 100;
+  border-radius:10px 10px 10px 10px;
+
+}
+textarea
+{
+  border: none;
+  outline: none;
+}
+#my-input
+{
+  margin:0% 2%;
+}
+span{
+  position: absolute;
+  left:94%;
+  bottom:80%;
+  margin: 1px 1px;
+  cursor: pointer;
+  font-size: 30px;
+}
+@keyframes drop {
+  0%
+  {
+      top:-100%;
+  }
+  100%
+  {
+      top:50%;
+  }
 }
