--- a/DBProject/CSS/About.css
+++ b/DBProject/CSS/About.css
@@ -15,6 +15,13 @@ ul
     display: flex;
   
   
-   justify-content:space-between;
+   /* justify-content:space-between;*/
     
+}
+
+.line
+{
+    background-color: #d8d8d8;
+    height:  1px;
+    width: 100%;
 }
