--- a/DBProject/CSS/app.css
+++ b/DBProject/CSS/app.css
@@ -17,6 +17,28 @@
   margin: 2.5% 2.5%;
   background-color:rgb(113, 115, 116);;
 }
+a:link
+{
+   color:white;
+   text-decoration: none;
+}
+a:visited
+{
+   color:white;
+   text-decoration: none;
+}
+a:hover
+{
+   color:springgreen;
+   text-decoration: none;
+}
+a:active
+{
+   color:white;
+   text-decoration: none;
+}
+
+
 #footer{
     
   width: 100%;
