--- a/DBProject/CSS/app.css
+++ b/DBProject/CSS/app.css
@@ -19,22 +19,22 @@
 }
 a:link
 {
-   color:white;
+   color:black;
    text-decoration: none;
 }
 a:visited
 {
-   color:white;
+   color:black;
    text-decoration: none;
 }
 a:hover
 {
-   color:springgreen;
+   color:black;
    text-decoration: none;
 }
 a:active
 {
-   color:white;
+   color:black;
    text-decoration: none;
 }
 
