--- a/DBProject/CSS/SignUp.css
+++ b/DBProject/CSS/SignUp.css
@@ -7,11 +7,11 @@
 }
 body
 {
-    background-image: url(../IMAGES/pexels-dimitry-anikin-5037913.jpg);
+    background-image: url(../IMAGES/pexels-pixabay-355465.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 
-    background-position: center -1vh;
+    background-position: center -3vh;
    
 }
 ul
@@ -25,10 +25,8 @@ ul
 }
 .form
 {
-    
-    border-radius: 10px;
-    border-color:white;
-    border-style: solid;
+    border-radius: 15px;
+    border:solid white;
     position: absolute;
     left:50%;
     top:50%;
@@ -39,25 +37,38 @@ ul
 input{
     padding: 5px 5px;
     outline: none;
-  border: solid;
-    border-radius: 10px;
+    border:none;
+    outline-style: none;
+    background-color:transparent;
      display:block;
-border-color: white;
+     border-bottom:white solid;
    
 }
 label
 {
     display:block;
 }
-a{
-    color:white;
-}
-/* #submit
+a:link {
+    color: white;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  a:visited {
+    color: #007bff;
+    background-color: transparent;
+    text-decoration: none;
+  }
+
+#submit
 {
-      display:block;
-    position: relative;
-    left:20%;
-} */
+    width:100%;
+    border:none;
+    border-radius:18px;
+    
+
+  
+}
 .container
 {
     position: relative;
