--- a/DBProject/CSS/login.css
+++ b/DBProject/CSS/login.css
@@ -2,16 +2,17 @@
     margin:0%;
     padding: 0%;
     box-sizing: border-box;
-
+ 
 
 }
 body
 {
-    background-image: url(../IMAGES/pexels-roman-odintsov-4553021.jpg);
+    background-image: url(../IMAGES/pexels-pixabay-258112.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center -2vh;
+    background-position: center -5vh;
    
+ 
 }
 ul
 {
@@ -22,13 +23,13 @@ ul
    justify-content:space-between;
     
 }
+
 .form
 {
-    
-    
-    border-radius: 10px;
-    border-color:white;
-    border-style: solid;
+    border-radius: 15px;
+    border:solid white;
+   
+
     position: absolute;
     left:50%;
     top:50%;
@@ -39,21 +40,38 @@ ul
 input{
     padding: 5px 5px;
     outline: none;
-  border: solid;
-    border-radius: 10px;
+    border:none;
+    outline-style: none;
+    background-color:transparent;
      display:block;
-border-color: white;
+     border-bottom: white solid;
+
 }
+
 label
 {
       display:block;
 }
-a{
-    color:white;
-}
-/* #submit
+a:link {
+    color: white;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  a:visited {
+    color: #007bff;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  a{
+      position: relative;
+      left:5%;
+  }
+#submit
 {
-      display:block;
-    position: relative;
-    left:25%;
-} */
+    width:100%;
+    border:none;
+    border-radius:18px;
+  
+}
