--- a/DBProject/CSS/login.css
+++ b/DBProject/CSS/login.css
@@ -7,7 +7,7 @@
 }
 body
 {
-    background-image: url(../IMAGES/pexels-pixabay-258112.jpg);
+    background-image: url(../IMAGES/pexels-photo-258112.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center -5vh;
