--- a/DBProject/CSS/SignUp.css
+++ b/DBProject/CSS/SignUp.css
@@ -7,7 +7,7 @@
 }
 body
 {
-    background-image: url(../IMAGES/pexels-pixabay-355465.jpg);
+    background-image: url(../IMAGES/pexels-pixabay-355465\ \(1\).jpg);
     background-repeat: no-repeat;
     background-size: cover;
 
