--- a/DBProject/CSS/user.css
+++ b/DBProject/CSS/user.css
@@ -20,6 +20,10 @@ ul
    /*justify-content:space-between;*/
     
 }
+* { 
+   
+    font-family: Georgia, 'Times New Roman', Times, serif;             
+}
 
 .fab{
     width:30px;
