--- a/DBProject/CSS/Browse.css
+++ b/DBProject/CSS/Browse.css
@@ -9,7 +9,12 @@
 margin: auto;
 float: left;
 }
+body{
+    background-image: url(../IMAGES/WhatsApp\ Image\ 2021-01-08\ at\ 2.58.12\ AM.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
 
+}
 .appslist{
     float:inline-end;
     margin: auto;
@@ -32,6 +37,16 @@ a.catlinks:visited
    color:black;
    text-decoration: none;
 }
+h1,h2,h3,h4,h5 { 
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 
+                 0 3px 0 #ccc, 0 4px 0 #ccc, 
+                 0 5px 0 #ccc, 0 6px 0 #ccc, 
+                 0 7px 0 #ccc, 0 8px 0 #ccc, 
+                 0 9px 0 #ccc, 0 10px 0 #ccc, 
+                 0 11px 0 #ccc, 0 12px 0 #ccc, 
+                 0 20px 30px rgba(0, 0, 0, 0.5); 
+    font-family: Georgia, 'Times New Roman', Times, serif;             
+} 
 a.catlinks:hover
 {
    color:springgreen;
